[gd_scene load_steps=5 format=3 uid="uid://dldeciyum7vct"]

[ext_resource type="Script" path="res://mobs/slime.gd" id="1_welxa"]
[ext_resource type="PackedScene" uid="uid://ogik4s70pgwl" path="res://assets/characters/slime/slime.tscn" id="1_xpmca"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlmk6"]
radius = 30.0
height = 78.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b1wed"]
radius = 468.107

[node name="Slime" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 1.0
script = ExtResource("1_welxa")

[node name="Slime" parent="." instance=ExtResource("1_xpmca")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hlmk6")

[node name="WanderTimer" type="Timer" parent="."]
autostart = true

[node name="SightRange" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource("CircleShape2D_b1wed")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
path_max_distance = 10.0
navigation_layers = 4
avoidance_layers = 0
avoidance_mask = 0
debug_enabled = true

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="area_entered" from="SightRange" to="." method="_on_sight_range_area_entered"]
